grammar.js
    source_file: $ => repeat($._statement),

    _statement: $ =>
      seq(
        choice(
          $.select_statement,
          $.create_table_statement,
          $.create_function_statement,
          $.create_view_statement,
        ),
        optional(";"),
      ),

    _simple_statement: $ =>
      prec.right(
        seq(
          choice(
            $.select_statement,
            $.create_table_statement,
            $.create_view_statement,
          ),
          optional(";"),
        ),
      ),

    select_statement: $ => seq(optional($.with_clause), $._select_statement),

    _function_language: $ =>
      seq(
        kw("LANGUAGE"),
        alias(choice(/[a-zA-Z]+/, /'[a-zA-Z]+'/), $.language),
      ),
    _compound_statement: $ =>
        prec.right(
            seq(
                optional(seq(field("begin_label", $.identifier), ":")),
                kw("BEGIN"),
                optional(kw("ATOMIC")),
                repeat1($._simple_statement),
                kw("END"),
                optional(field("end_label", $.identifier)),
                optional(";"),
            ),
        ),
    return_statement: $ =>
        seq(kw("RETURN"), choice($._expression, $.select_statement)),
    declare_statement: $ =>
        seq(kw("DECLARE"), $.identifier, $._type, optional($.default_clause)),

    create_function_statement: $ =>
        prec.right(
            seq(
                "FUNCTION",
                $._identifier,
                $.create_function_parameters,
                seq(kw("RETURNS"), $._create_function_return_type),
                repeat(
                    choice(
                        $._function_language,
                        seq(kw("TRANSFORM FOR TYPE"), commaSep1($.identifier)),
                        kw("WINDOW"),
                        seq(optional(kw("NOT")), kw("LEAKPROOF")),
                        seq(kw("COST"), $.number),
                        seq(kw("ROWS"), $.number),
                        seq(kw("SUPPORT"), $.identifier),
                        $.function_body,
                    ),
                ),
            ),
        ),

    _create_function_return_type: $ =>
        prec.right(choice($.setof, $._type, $.constrained_type)),
    setof: $ =>
        prec.right(seq(kw("SETOF"), choice($._type, $.constrained_type))),
    create_function_parameter: $ =>
        seq(
            field(
                "argmode",
                optional(choice(kw("IN"), kw("OUT"), kw("INOUT"), kw("VARIADIC"))),
            ),
            optional($.identifier),
            choice($._type, $.constrained_type),
            optional(seq("=", alias($._expression, $.default))),
        ),
    create_function_parameters: $ =>
        seq("(", optional(commaSep1($.create_function_parameter)), ")"),

    function_body: $ =>
        choice(
            $._simple_statement,
            $._compound_statement,
            seq(kw("AS"), field("script", $.string)),
            seq(
                kw("AS"),
                field("obj_file", $.string),
                field("link_symbol", $.string),
            ),
        ),
    table_column: $ =>
        prec.right(
            seq(
                field("name", $._identifier),
                field("type", $._type),
                repeat(
                    choice(
                        $.default_clause,
                        $.check_constraint,
                        $.unique_constraint,
                        $.null_constraint,
                    ),
                ),
            ),
        ),
    _column_default_expression: $ =>
        choice(
            $._parenthesized_expression,
            $.string,
            $.number,
            $.identifier,
            $.function_call,
        ),
    default_clause: $ =>
        seq(
            kw("DEFAULT"),
            // TODO: this should be specific variable-free expression https://www.postgresql.org/docs/9.1/sql-createtable.html
            // TODO: simple expression to use for check and default
            choice($._column_default_expression, $.type_cast),
        ),
    table_parameters: $ =>
        seq(
            "(",
            optional(commaSep1(choice($.table_column, $._table_constraint))),
            ")",
        ),
    _table_constraint: $ =>
        prec.right(
            seq(
                optional(seq(kw("CONSTRAINT"), field("name", $._identifier))),
                choice(
                    alias($.table_constraint_unique, $.unique),
                    alias($.table_constraint_check, $.check),
                    alias($.table_constraint_exclude, $.exclude),
                ),
            ),
        ),
    create_table_statement: $ =>
        seq(
            kw("CREATE"),
            kw("TABLE"),
            $._identifier,
            $.table_parameters,
        ),
    create_view_statement: $ =>
      prec.right(
        seq(
          kw("CREATE"),
          optional(createCaseInsensitiveRegex("OR REPLACE")),
          optional(choice(kw("TEMPORARY"), kw("TEMP"))),
          kw("VIEW"),
          $._identifier,
          optional($.view_columns),
          optional($.view_options),
          $.view_body,
          optional($.view_check_option),
        ),
      ),
    view_columns: $ => seq("(", commaSep1($._identifier), ")"),
    // PostgreSQL currently only support the SECURITY_BARRIER option
    view_option: $ => choice($._identifier, $.assigment_expression),
    view_options: $ => seq(kw("WITH"), "(", commaSep1($.view_option), ")"),
    // MySQL support
    view_check_option: $ =>
      seq(
        kw("WITH"),
        optional(choice(kw("CASCADED"), kw("LOCAL"))),
        kw("CHECK OPTION"),
      ),
    view_body: $ =>
      seq(
        kw("AS"),
        choice($.select_statement, $.select_subexpression, $.values_clause),
      ),


    // SELECT
    _select_statement: $ =>
      prec.right(
        seq(
          $.select_clause,
          optional($.from_clause),
          optional($.where_clause),
          optional($.group_by_clause),
          optional(commaSep1($.window_clause)),
          optional($.order_by_clause),
          optional($.limit_clause),
          optional($.offset_clause),
        ),
      ),

    where_clause: $ => seq(kw("WHERE"), $._expression),
    alias: $ =>
      choice(
        seq(
          $.identifier,
          optional(choice($.column_names, $.column_definitions)),
        ),
        $.column_definitions,
      ),
    _aliasable_expression: $ =>
      prec.right(choice($._expression, $._aliased_expression)),
    select_clause_body: $ =>
      commaSep1(
        seq(
          $._aliasable_expression,
          optional(seq(kw("INTO"), field("into", $.identifier))),
        ),
      ),
    select_clause: $ =>
      prec.right(seq(kw("SELECT"), optional($.select_clause_body))),
    from_clause: $ => seq(kw("FROM"), commaSep1($._from_item)),
    _from_item: $ =>
      choice(
        seq(
          optional(kw("ONLY")),
          $._aliasable_expression,
          optional($.tablesample_clause),
        ),
      ),
    select_subexpression: $ =>
      prec(1, seq(optional(kw("LATERAL")), "(", $.select_statement, ")")),

    values_clause: $ =>
      seq(
        kw("VALUES"),
        commaSep1($.values_clause_item),
        optional($.order_by_clause),
        optional($.limit_clause),
        optional($.offset_clause),
        optional($.fetch_clause),
      ),
    values_clause_item: $ => seq("(", commaSep1($._expression), ")"),

    null_constraint: $ => seq(optional(kw("NOT")), $.NULL),
    function_call: $ =>
      prec.right(
        1,
        seq(
          optional(kw("LATERAL")),
          field("function", $._identifier),
          "(",
          optional(field("arguments", $._function_call_arguments)),
          ")",
          optional($.with_ordinality),
          optional($.within_group_clause),
          optional($.filter_clause),
          optional($.over_clause),
        ),
      ),
    _function_call_arguments: $ =>
      seq(
        optional(choice(kw("ALL"), kw("DISTINCT"))),
        commaSep1($._expression),
        optional($.order_by_clause),
      ),
    number: $ => {
      const digits = repeat1(/[0-9]+_?/);
      const exponent = seq(/[eE][\+-]?/, digits);

      return token(
        seq(
          choice(
            seq(digits, ".", optional(digits), optional(exponent)),
            seq(optional(digits), ".", digits, optional(exponent)),
            seq(digits, exponent),
            seq(digits),
          ),
        ),
      );
    },

    _unquoted_identifier: $ => /[a-zA-Z0-9_]+/,
    _quoted_identifier: $ => seq('"', field("name", /(""|[^"])*/), '"'), // ANSI QUOTES
    identifier: $ => choice($._unquoted_identifier, $._quoted_identifier),
    _identifier: $ => choice($.identifier, $.dotted_name),
    string: $ =>
      choice(
        seq("'", field("content", alias(/(''|[^'])*/, $.content)), "'"),
        seq(
          $._dollar_quoted_string_tag,
          field("content", alias($._dollar_quoted_string_content, $.content)),
          $._dollar_quoted_string_end_tag,
        ),
      ),
    type: $ =>
      prec.right(
        seq(
          $._identifier,
          optional(kw("VARYING")), // CHARACTER/BIT VARYING
          optional(kw("PRECISION")), // DOUBLE PRECISION
          optional(seq("(", commaSep1($.number), ")")),
          optional(seq(choice(kw("WITH"), kw("WITHOUT")), kw("TIME ZONE"))), // TIME/TIMESTAMP (n) WITH/WITHOUT TIME ZONE
        ),
      ),
    array_type: $ =>
      prec.right(seq($._type, repeat1(seq("[", optional($.number), "]")))),
    _type: $ => choice($.type, $.array_type),
    binary_expression: $ => {
      const table = [
        [PREC.exp, "^"],
        [PREC.multiplicative, choice(...multiplicative_operators)],
        [PREC.additive, choice(...additive_operators)],
        [PREC.comparative, choice(...comparative_operators)],
      ];

      return choice(
        ...table.map(([precedence, operator]) =>
          prec.left(
            precedence,
            seq(
              field("left", $._expression),
              field("operator", operator),
              field("right", $._expression),
            ),
          ),
        ),
      );
    },

    _expression: $ =>
      choice(
        $.interval_expression,
        $.function_call,
        $.string,
        $.json_access,
        $.TRUE,
        $.FALSE,
        $.NULL,
        $.asterisk_expression,
        $._identifier,
        $.number,
        $.in_expression,
        $.is_expression,
        $.boolean_expression,
        $._parenthesized_expression,
        $.type_cast,
        $.unary_expression,
        $.binary_expression,
        $.conditional_expression,
        $.array_element_access,
        $.argument_reference,
        $.select_subexpression,
        $.at_time_zone_expression,
      ),
  },
});

function commaSep1(rule) {
  return sep1(rule, ",");
}

function sep1(rule, separator) {
  return seq(rule, repeat(seq(separator, rule)));
}

function sep2(rule, separator) {
  return seq(rule, repeat1(seq(separator, rule)));
}
